fixed config menu not showing up for sub menu items

--- a/prototype/css/keyboard.css
+++ b/prototype/css/keyboard.css
@@ -256,7 +256,7 @@
   
   /* ----------------- Shift Toggle -------------- */
   #keyboard .f-key .toggle-key.shift { 
-    background-position: 0 -48px;
+    background-position: 0 -49px;
   }
 
   /* left Side */
@@ -271,7 +271,7 @@
   }
 
   #keyboard .f-key .toggle-key.shift:hover,
-  #keyboard .f-key .toggle-key.shift.toggled { background-position: 0 -60px; }
+  #keyboard .f-key .toggle-key.shift.toggled { background-position: 0 -61px; }
 
   /* ----------------- Ctrl Toggle --------------- */
   #keyboard .f-key .toggle-key.ctrl { background-position: -24px -48px; }
