--- a/prototype/css/main-menu.css
+++ b/prototype/css/main-menu.css
@@ -14,8 +14,7 @@
   .menu ul li {
     clear             : both;
     position          : relative;
-    padding           : 0 12px;
-   /* min-width         : 150px;*/
+    padding           : 0 7px;
     text-align        : left;
     font-size         : 12px;
     line-height       : 26px;
@@ -26,11 +25,12 @@
   .menu-parent li.hover,
   .menu-parent li:hover,
   .menu-parent li.select,
+  .menu-parent li.select,
   .menu-parent li:hover li:hover,
   .menu-parent li.hover li:hover,
   .menu-parent li.hover li.hover{
     background-image: -webkit-linear-gradient(bottom, rgba(0, 144, 240, 0.78), rgba(39, 169, 255, 0.91));
-    color: #fff;
+    color: #fff !important;
   }
   .menu-parent li:hover li,
   .menu-parent li.hover li{
@@ -87,9 +87,8 @@
       width        : 10px;
       height       : 10px;
       margin       : 0 8px 0 0;
-      border       : 1px solid rgba(0, 0, 0, 0.2);
+      border       : 1px solid rgba(0, 0, 0, 0.1);
       border-radius: 2px;
-      box-shadow   : inset 0 0 3px rgba(0, 0, 0, 0.2);
     }
       #menu-hub .checkbox .inner-shadow {
         display         : block;
@@ -97,7 +96,7 @@
         width           : 100%;
         height          : 100%;
         border-radius   : 2px;
-        background-image: -webkit-linear-gradient(bottom, rgb(230, 230, 230) 50%, rgb(240, 240, 240) 51%, rgb(250, 250, 255) 100%);
+        background-image: -webkit-linear-gradient(bottom, rgba(230, 230, 230,0.1),rgba(250, 250, 250,0.0));
       }
       #menu-hub .checkbox.checked .check {
         position           : absolute;
@@ -193,15 +192,15 @@
 
 /* Sub Menu */
         
-  #ai-wheel #file-menu { width: 170px; }
+  #ai-wheel #file-menu { width: 180px; }
   #ai-wheel.right-handed #file-menu { left: -140px; }
   #ai-wheel.left-handed #file-menu { right: -140px; }
-  #ai-wheel #edit-menu { width: 210px; }
-  #ai-wheel #object-menu { width: 170px; }
-  #ai-wheel #type-menu { width: 170px; }
-  #ai-wheel #select-menu { width: 150px; }
-  #ai-wheel #effect-menu { width: 150px; }
-  #ai-wheel #view-menu { width: 170px; }
+  #ai-wheel #edit-menu { width: 220px; }
+  #ai-wheel #object-menu { width: 180px; }
+  #ai-wheel #type-menu { width: 180px; }
+  #ai-wheel #select-menu { width: 160px; }
+  #ai-wheel #effect-menu { width: 160px; }
+  #ai-wheel #view-menu { width: 190px; }
     #ai-wheel #type-menu #font-list .mini-menu-container { 
       margin-top: 52px;
     }
@@ -287,15 +286,23 @@
   #ai-wheel ul.visible,
   #ai-wheel ul ul.visible { display: block; }
 
-  #ai-wheel.right-handed ul.menu-parent { padding: 0px 30px 0px 0px; }
-  #ai-wheel.left-handed ul.menu-parent { padding: 0px 0px 0px 30px; }
+  #ai-wheel.right-handed ul.menu-parent { padding: 0px 20px 0px 0px; }
+  #ai-wheel.left-handed ul.menu-parent { padding: 0px 0px 0px 20px; }
 
     #ai-wheel ul .break { height: 1px; margin: 2px 0 3px; }
     #ai-wheel.left-handed ul .break { background-image: -webkit-linear-gradient(right,rgba(0,0,0,0.1) 82%,rgba(0,0,0,0.0) 100%); }
     #ai-wheel.right-handed ul .break { background-image: -webkit-linear-gradient(left,rgba(0,0,0,0.1) 82%,rgba(0,0,0,0.0) 100%); }
 
-    #ai-wheel ul.menu-parent li { text-align: left; border-radius: 0; position: relative; }
-    #ai-wheel.right-handed ul.menu-parent li { padding-left:14px; }
+    #ai-wheel ul.menu-parent li { 
+      text-align: left; 
+      border-radius: 0; 
+      position: relative;
+      text-indent: 20px;
+    }
+    #ai-wheel ul.menu-parent li.checkbox-container {
+      text-indent: 0;
+    }
+    #ai-wheel.right-handed ul.menu-parent li { padding-left:10px; }
     #ai-wheel ul.menu-parent li.first { margin: 3px 0 0 0; }
     #ai-wheel ul.menu-parent li.last { margin: 0 0 3px 0; }
     #ai-wheel ul.menu-parent li.first.last,
@@ -336,7 +343,7 @@
   #ai-wheel .mini-menu-container {
     position          : absolute;
     top               : 0;
-    width             : 30px;
+    width             : 20px;
     -webkit-transition: all 0.2s; 
   }
   #ai-wheel.right-handed .mini-menu-container { right: 0px; }
@@ -346,17 +353,14 @@
     #ai-wheel .mini-menu-container .miniMenu {
       width             : 5px;
       height            : 5px;
-      margin            : 0 12px 4px 12px;
+      margin            : 0 8px 4px 8px;
       border-radius     : 2px;
       overflow          : hidden;
       -webkit-transition: all 0.3s; 
     }
     #ai-wheel .mini-menu-container .miniMenu:hover,
     #ai-wheel .mini-menu-container .miniMenu.hover { background-image: -webkit-linear-gradient(bottom,rgba(25,156,255,1),rgba(25,156,255,1)); }
-    #ai-wheel .mini-menu-container:hover .miniMenu { width: 12px; }
     #ai-wheel .mini-menu-container .miniMenu.hidden { height: 0; margin: 0; }
-    #ai-wheel.left-handed .mini-menu-container:hover .miniMenu { margin-left: 9px; }
-    #ai-wheel.right-handed .mini-menu-container:hover .miniMenu { margin-right: 9px; }
 
       #ai-wheel .mini-menu-container .miniMenu .innerShadow {
         width           : 100%;
